force-app/main/default/objects/Prospect/fields/Address_one__c.field-meta.xml
<CustomField>
    <fullName>Address_one__c</fullName>
    <label>Address one</label>
    <length>255</length>
    <type>Text</type>
</CustomField>