force-app/main/default/objects/Prospect/fields/Address_Two__c.field-meta.xml
<CustomField>
    <fullName>Address_Two__c</fullName>
    <label>Address Two</label>
    <length>255</length>
    <type>Text</type>
</CustomField>