force-app/main/default/objects/Prospect/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software PC</fullName>
            </value>
            <value>
                <fullName>Software PC - Windows</fullName>
            </value>
            <value>
                <fullName>Software PLC</fullName>
            </value>
            <value>
                <fullName>Hardware Electrical</fullName>
            </value>
            <value>
                <fullName>Hardware Mechanical</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>