force-app/main/default/objects/Prospect/fields/Company_Account__c.field-meta.xml
<CustomField>
    <fullName>Company_Account__c</fullName>
    <label>Company / Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>