force-app/main/default/objects/Prospect/fields/Company_Role__c.field-meta.xml
<CustomField>
    <fullName>Company_Role__c</fullName>
    <label>Company Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titolare</fullName>
            </value>
            <value>
                <fullName>Resp. produzione</fullName>
            </value>
            <value>
                <fullName>Resp. sala metrologica</fullName>
            </value>
            <value>
                <fullName>Resp. qualità</fullName>
            </value>
            <value>
                <fullName>Uff.acquisti</fullName>
            </value>
            <value>
                <fullName>Tecnico sala metrologica</fullName>
            </value>
            <value>
                <fullName>Operatore macchina</fullName>
            </value>
            <value>
                <fullName>Resp.commerciale</fullName>
            </value>
            <value>
                <fullName>Venditore</fullName>
            </value>
            <value>
                <fullName>Application guy/Sales engineer</fullName>
            </value>
            <value>
                <fullName>Logistica</fullName>
            </value>
            <value>
                <fullName>Accounting (amministrazione)</fullName>
            </value>
            <value>
                <fullName>Responsabile di</fullName>
            </value>
            <value>
                <fullName>Group Leader</fullName>
            </value>
            <value>
                <fullName>Membro</fullName>
            </value>
            <value>
                <fullName>Adetto alla programmazione macchina</fullName>
            </value>
            <value>
                <fullName>Utilizzatore macchina</fullName>
            </value>
            <value>
                <fullName>Planner</fullName>
            </value>
            <value>
                <fullName>Master/foreman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>