force-app/main/default/objects/Prospect/fields/Consenso_al_trattamento_dati__c.field-meta.xml
<CustomField>
    <fullName>Consenso_al_trattamento_dati__c</fullName>
    <label>Consenso al trattamento dati</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>