force-app/main/default/objects/Prospect/fields/Data_invio_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Data_invio_GDPR__c</fullName>
    <label>Data invio GDPR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>