force-app/main/default/objects/Prospect/fields/Data_risposta_GDPR__c.field-meta.xml
<CustomField>
    <fullName>Data_risposta_GDPR__c</fullName>
    <label>Data risposta GDPR</label>
    <length>15</length>
    <type>Text</type>
</CustomField>