force-app/main/default/objects/Prospect/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>