force-app/main/default/objects/Prospect/fields/email_bounced_reason__c.field-meta.xml
<CustomField>
    <fullName>email_bounced_reason__c</fullName>
    <label>Email Bounced Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>