force-app/main/default/objects/Prospect/fields/Feedback_Contact__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Contact__c</fullName>
    <label>Feedback Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>