force-app/main/default/objects/Prospect/fields/Id_Prospect_AE__c.field-meta.xml
<CustomField>
    <fullName>Id_Prospect_AE__c</fullName>
    <label>Id Prospect AE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>