force-app/main/default/objects/Prospect/fields/is_do_not_email__c.field-meta.xml
<CustomField>
    <fullName>is_do_not_email__c</fullName>
    <label>Do Not Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>