force-app/main/default/objects/Prospect/fields/Last_Request__c.field-meta.xml
<CustomField>
    <fullName>Last_Request__c</fullName>
    <label>Last Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>