force-app/main/default/objects/Prospect/fields/Machine_User_FOV__c.field-meta.xml
<CustomField>
    <fullName>Machine_User_FOV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Machine User FOV</label>
    <type>Checkbox</type>
</CustomField>