force-app/main/default/objects/Prospect/fields/Need_to_Resubscribe__c.field-meta.xml
<CustomField>
    <fullName>Need_to_Resubscribe__c</fullName>
    <label>Need to Resubscribe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>