force-app/main/default/objects/Prospect/fields/opted_out__c.field-meta.xml
<CustomField>
    <fullName>opted_out__c</fullName>
    <label>opted out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>