force-app/main/default/objects/Prospect/fields/Pardot_Hard_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Hard_Bounced__c</fullName>
    <label>Pardot Hard Bounced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>