force-app/main/default/objects/Prospect/fields/Potentially_interested_in__c.field-meta.xml
<CustomField>
    <fullName>Potentially_interested_in__c</fullName>
    <label>Potentially interested in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M304</fullName>
            </value>
            <value>
                <fullName>M306</fullName>
            </value>
            <value>
                <fullName>M309</fullName>
            </value>
            <value>
                <fullName>M314</fullName>
            </value>
            <value>
                <fullName>M318</fullName>
            </value>
            <value>
                <fullName>M604</fullName>
            </value>
            <value>
                <fullName>M606</fullName>
            </value>
            <value>
                <fullName>M609</fullName>
            </value>
            <value>
                <fullName>M614</fullName>
            </value>
            <value>
                <fullName>M618</fullName>
            </value>
            <value>
                <fullName>M906</fullName>
            </value>
            <value>
                <fullName>M909</fullName>
            </value>
            <value>
                <fullName>M914</fullName>
            </value>
            <value>
                <fullName>M918</fullName>
            </value>
            <value>
                <fullName>M1209</fullName>
            </value>
            <value>
                <fullName>M1214</fullName>
            </value>
            <value>
                <fullName>M1218</fullName>
            </value>
            <value>
                <fullName>MTL 1</fullName>
            </value>
            <value>
                <fullName>MTL X5</fullName>
            </value>
            <value>
                <fullName>MTL X10</fullName>
            </value>
            <value>
                <fullName>MTL 300 Evo</fullName>
            </value>
            <value>
                <fullName>MTL 500 Evo (60)</fullName>
            </value>
            <value>
                <fullName>MTL 500 Ergon (60)</fullName>
            </value>
            <value>
                <fullName>MTL 850 Ergon (60)</fullName>
            </value>
            <value>
                <fullName>MTL 1250 Ergon (60)</fullName>
            </value>
            <value>
                <fullName>MTL 500 Evo (120)</fullName>
            </value>
            <value>
                <fullName>MTL 500 Ergon (120)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>