force-app/main/default/objects/Prospect/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sig.</fullName>
            </value>
            <value>
                <fullName>Sig.na</fullName>
            </value>
            <value>
                <fullName>Sig.ra</fullName>
            </value>
            <value>
                <fullName>Per. Ind.</fullName>
            </value>
            <value>
                <fullName>Ing.</fullName>
            </value>
            <value>
                <fullName>Dott.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>Herr</fullName>
            </value>
            <value>
                <fullName>Frau</fullName>
            </value>
            <value>
                <fullName>Herr Dr.</fullName>
            </value>
            <value>
                <fullName>Frau Dr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>